--- a/minggu 3/Untitled.ipynb
+++ b/minggu 3/Untitled.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 88,
    "id": "b202ecbb",
    "metadata": {},
    "outputs": [],
@@ -28,8 +28,14 @@
     "from IPython.display import display\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
-    "df = pd.read_excel('dataKasus-1.xlsx')"
+    "\n",
+    "\n",
+    "df = pd.read_excel('dataKasus-1.xlsx')\n",
+    "encoder = LabelEncoder()\n",
+    "scaler = MinMaxScaler()"
    ]
   },
   {
@@ -48,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 89,
    "id": "4e67cecd",
    "metadata": {
     "scrolled": true
@@ -209,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 90,
    "id": "031397d0",
    "metadata": {},
    "outputs": [
@@ -249,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 91,
    "id": "7604e517",
    "metadata": {},
    "outputs": [
@@ -392,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 92,
    "id": "b1b40633",
    "metadata": {},
    "outputs": [
@@ -428,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 93,
    "id": "d8af32f7",
    "metadata": {},
    "outputs": [
@@ -555,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 94,
    "id": "fd62fed4",
    "metadata": {},
    "outputs": [],
@@ -564,7 +570,8 @@
     "df['USIA'] = pd.to_numeric(df['USIA'].str.replace(r'\\D', '', regex=True), errors='coerce')\n",
     "\n",
     "# Mengisi nilai null dengan nilai rata-rata\n",
-    "df['USIA'] = df['USIA'].fillna(df['USIA'].mean()).astype(int)\n"
+    "df['USIA'] = df['USIA'].fillna(df['USIA'].mean()).astype(int)\n",
+    "\n"
    ]
   },
   {
@@ -577,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 95,
    "id": "ad5b6612",
    "metadata": {},
    "outputs": [],
@@ -588,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 96,
    "id": "2e372cae",
    "metadata": {},
    "outputs": [
@@ -613,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 97,
    "id": "b2f890f3",
    "metadata": {},
    "outputs": [],
@@ -623,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 98,
    "id": "51b5b9a8",
    "metadata": {},
    "outputs": [
@@ -647,6 +654,212 @@
     "df['PE/Non PE'] = df['PE/Non PE'].str.strip()\n",
     "jarak_kelahiran_counts = df['PE/Non PE'].value_counts()\n",
     "print(jarak_kelahiran_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3c68a94",
+   "metadata": {},
+   "source": [
+    "## Mengubah attribute kategorial Menjadi Numerik/Kategorikal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "619d6b3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "4    0\n",
+      "Name: RIW HIPERTENSI, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mengubah 'RIW HIPERTENSI' menjadi numeric/kategorikal\n",
+    "df['RIW HIPERTENSI'] = df['RIW HIPERTENSI'].map({'Ya': 1, 'Tidak': 0})\n",
+    "print(df['RIW HIPERTENSI'][:5])\n",
+    "\n",
+    "# mengubah 'JARAK KELAHIRAN' menjadi numeric/kategorikal\n",
+    "df['JARAK KELAHIRAN'] = encoder.fit_transform(df['JARAK KELAHIRAN'])\n",
+    "\n",
+    "# mengubah 'SESOK RENDAH' menjadi numeric/kategorikal\n",
+    "df['SOSEK RENDAH'] = encoder.fit_transform(df['SOSEK RENDAH'])\n",
+    "\n",
+    "# mengubah 'RIW PE' menjadi numeric/kategorikal\n",
+    "df['RIW PE'] = encoder.fit_transform(df['RIW PE'])\n",
+    "\n",
+    "# mengubah 'OBESITAS' menjadi numeric/kategorikal\n",
+    "df['OBESITAS'] = df['OBESITAS'].map({'Tidak': 1, 'Ya': 0})\n",
+    "\n",
+    "# mengubah 'RIW HIPERTENSI/PE DALAM KELUARGA' menjadi numeric/kategorikal\n",
+    "df['RIW HIPERTENSI/PE DALAM KELUARGA'] = df['RIW HIPERTENSI/PE DALAM KELUARGA'].map({'Tidak': 1, 'Ada': 0})\n",
+    "\n",
+    "# mengubah 'RIW DM' menjadi numeric/kategorikal\n",
+    "df['RIW DM'] = df['RIW DM'].map({'Tidak': 1, 'Ya': 0})\n",
+    "\n",
+    "# mengubah 'PE/Non PE' menjadi numeric/kategorikal\n",
+    "df['PE/Non PE'] = df['PE/Non PE'].map({'PE': 1, 'Non PE': 0})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77ab0e2a",
+   "metadata": {},
+   "source": [
+    "## Normalisasi attribute numerik"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "f082e49f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# menormalisasi Attribute USIA dan PARITAS\n",
+    "df[['USIA', 'PARITAS']] = scaler.fit_transform(df[['USIA', 'PARITAS']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "6a75d822",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>USIA</th>\n",
+       "      <th>PARITAS</th>\n",
+       "      <th>JARAK KELAHIRAN</th>\n",
+       "      <th>RIW HIPERTENSI</th>\n",
+       "      <th>RIW PE</th>\n",
+       "      <th>OBESITAS</th>\n",
+       "      <th>RIW DM</th>\n",
+       "      <th>RIW HIPERTENSI/PE DALAM KELUARGA</th>\n",
+       "      <th>SOSEK RENDAH</th>\n",
+       "      <th>PE/Non PE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.533333</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.233333</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.700000</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       USIA   PARITAS  JARAK KELAHIRAN  RIW HIPERTENSI  RIW PE  OBESITAS  \\\n",
+       "0  0.333333  0.500000                0               0       9         1   \n",
+       "1  0.533333  0.333333                0               0       7         1   \n",
+       "2  0.233333  0.166667                2               0       9         1   \n",
+       "3  0.166667  0.166667                2               0       9         1   \n",
+       "4  0.700000  0.500000                1               0       9         1   \n",
+       "\n",
+       "   RIW DM  RIW HIPERTENSI/PE DALAM KELUARGA  SOSEK RENDAH  PE/Non PE  \n",
+       "0       0                                 1             1        0.0  \n",
+       "1       1                                 0             1        1.0  \n",
+       "2       1                                 1             1        0.0  \n",
+       "3       1                                 1             1        0.0  \n",
+       "4       1                                 1             1        0.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(df.head())"
    ]
   }
  ],
