--- a/Prediksi Resiko Diabetes/prediksi resiko diabetes dengan randomForestClassifier.ipynb
+++ b/Prediksi Resiko Diabetes/prediksi resiko diabetes dengan randomForestClassifier.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 13,
    "id": "57fda373",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 14,
    "id": "e0de596d",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "4  21.0     N  "
       ]
      },
-     "execution_count": 184,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 15,
    "id": "10a65a25",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 16,
    "id": "1ca5e55b",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 17,
    "id": "e1064235",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 18,
    "id": "8a8ada63",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 19,
    "id": "3299c1ca",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
        "4       1   33   7.1  46    4.9   4.9  1.0  0.8  2.0   0.4  21.0     N"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 20,
    "id": "31d54818",
    "metadata": {},
    "outputs": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 21,
    "id": "b367f96b",
    "metadata": {},
    "outputs": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 22,
    "id": "841e1466",
    "metadata": {},
    "outputs": [
@@ -548,7 +548,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_174992\\3265762454.py:4: FutureWarning: \n",
+      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_202876\\3265762454.py:4: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 23,
    "id": "f4f45b87",
    "metadata": {},
    "outputs": [
@@ -622,22 +622,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 24,
    "id": "5040734b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ASUS\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:1474: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return fit_method(estimator, *args, **kwargs)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Memuat model Random Forest dari file .pkl\n",
+      "\n",
       "Akurasi model training Random Forest: 1.00\n",
       "\n",
       "\n",
@@ -652,44 +646,22 @@
       "   macro avg       1.00      1.00      1.00       800\n",
       "weighted avg       1.00      1.00      1.00       800\n",
       "\n",
-      "Akurasi model testing Random Forest: 0.99\n",
+      "Akurasi model testing Random Forest: 0.98\n",
       "\n",
       "\n",
       "Laporan klasifikasi Random Forest (Testing):\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           N       0.95      0.95      0.95        21\n",
+      "           N       0.95      0.90      0.93        21\n",
       "           P       1.00      1.00      1.00         6\n",
       "           Y       0.99      0.99      0.99       173\n",
       "\n",
-      "    accuracy                           0.99       200\n",
-      "   macro avg       0.98      0.98      0.98       200\n",
-      "weighted avg       0.99      0.99      0.99       200\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ASUS\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
-      "C:\\Users\\ASUS\\anaconda3\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "    accuracy                           0.98       200\n",
+      "   macro avg       0.98      0.97      0.97       200\n",
+      "weighted avg       0.98      0.98      0.98       200\n",
       "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n",
-      "C:\\Users\\ASUS\\anaconda3\\Lib\\site-packages\\sklearn\\neighbors\\_classification.py:238: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return self._fit(X, y)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Memuat model Logistic Regression dari file .pkl\n",
+      "\n",
       "Akurasi model training Logistic Regression: 0.93\n",
       "\n",
       "\n",
@@ -717,6 +689,8 @@
       "    accuracy                           0.94       200\n",
       "   macro avg       0.80      0.74      0.75       200\n",
       "weighted avg       0.94      0.94      0.94       200\n",
+      "\n",
+      "Memuat model K-Nearest Neighbors dari file .pkl\n",
       "\n",
       "Akurasi model training K-Nearest Neighbors: 0.91\n",
       "\n",
@@ -750,9 +724,12 @@
     }
    ],
    "source": [
+    "import joblib\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.metrics import classification_report, accuracy_score\n",
+    "import os\n",
     "\n",
     "# Inisialisasi model\n",
     "models = {\n",
@@ -761,10 +738,31 @@
     "    \"K-Nearest Neighbors\": KNeighborsClassifier()\n",
     "}\n",
     "\n",
+    "# Fungsi untuk menyimpan model ke file .pkl\n",
+    "def save_model(model, model_name):\n",
+    "    joblib.dump(model, f'{model_name.lower().replace(\" \", \"_\")}.pkl')\n",
+    "\n",
+    "# Fungsi untuk memuat model dari file .pkl\n",
+    "def load_model(model_name):\n",
+    "    if os.path.exists(f'{model_name.lower().replace(\" \", \"_\")}.pkl'):\n",
+    "        return joblib.load(f'{model_name.lower().replace(\" \", \"_\")}.pkl')\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
     "# Melatih dan menguji setiap model\n",
     "for model_name, model in models.items():\n",
-    "    # Melatih model\n",
-    "    model.fit(X_train, y_train)\n",
+    "    # Cek apakah model sudah ada dalam file .pkl\n",
+    "    loaded_model = load_model(model_name)\n",
+    "    \n",
+    "    if loaded_model is not None:\n",
+    "        # Jika model sudah ada, gunakan model yang dimuat\n",
+    "        model = loaded_model\n",
+    "        print(f\"Memuat model {model_name} dari file .pkl\\n\")\n",
+    "    else:\n",
+    "        # Jika model belum ada, latih model dan simpan ke file .pkl\n",
+    "        print(f\"Melatih model {model_name}...\\n\")\n",
+    "        model.fit(X_train, y_train)\n",
+    "        save_model(model, model_name)\n",
     "    \n",
     "    # Menguji model training\n",
     "    y_train_predict = model.predict(X_train)\n",
